# pytorch_tabular

./: .pre-commit-config.yaml  ISSUE_611_RECOMMENDATION.md  PROGRESS_BAR_GUIDE.md  PROGRESS_BAR_REFACTOR.md  PR_CREATION_INSTRUCTIONS.md  PR_DESCRIPTION.md  README.md  pyproject.toml  test_progress_utility.py
.github/: dependabot.yml
.github/workflows/: contributors.yml  documentation_links.yml  releasing.yml  testing.yml
docs/: history.md  tabnet_migration_guide.md
requirements/: base.txt  dev.txt  extra.txt
src/pytorch_tabular/: categorical_encoders.py  feature_extractor.py  tabular_model.py  tabular_model_sweep.py  tabular_model_tuner.py
src/pytorch_tabular/config/: config.py
src/pytorch_tabular/models/: base_model.py
src/pytorch_tabular/models/tabnet/: tabnet_model.py
src/pytorch_tabular/ssl_models/: base_model.py
src/pytorch_tabular/utils/: __init__.py  logger.py  progress.py
tests/: conftest.py  test_autoint.py  test_common.py  test_config.py  test_danet.py  test_ft_transformer.py  test_gandalf.py  test_gate.py  test_model_stacking.py  test_tabnet.py  test_tabtransformer.py
