[project]
name = "pytorch_tabular"
version = "1.2.0"
description = "A standard framework for using Deep Learning for tabular data"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }

authors = [
    { name = "Manu Joseph", email = "manujosephv@gmail.com" }
]

requires-python = ">=3.10,<3.15"

keywords = [
    "pytorch",
    "tabular",
    "pytorch-lightning",
    "neural network",
]


classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "torch>=1.11.0",
    "numpy<=3.0.0",
    "pandas>=1.1.5,<3.0.0",
    "scikit-learn>=1.3.0,<2.0",
    "pytorch-lightning>=2.0.0,<2.7.0",
    "scipy>=1.8,<2.0",
    "omegaconf>=2.3.0",
    "torchmetrics>=0.10.0,<1.9.0",
    "einops>=0.6.0,<0.9.0",
    "rich>=11.0.0",
    "scikit-base",
]


[project.optional-dependencies]

dev = [
    "wget",
    "bump2version==1.0.1",
    "mkdocs-material>=9.5,<9.8",
    "ipython[notebook]>8.0,<9.0",
    "mkdocstrings[python]==0.29.*",
    "mknotebooks==0.8.*",
    "pytest>=5.3.2",
    "pytest-runner>=5.1",
    "torch_optimizer",
]

extra = [
    "wandb>=0.15.0,<0.25.0",
    "plotly>=5.13.0,<6.6.0",
    "kaleido>=0.2.0,<0.3.0",
    "captum>=0.5.0,<0.8.0",
    "pytorch-tabnet<4.2",
]

notebooks = [
    "ipywidgets",
    "matplotlib>3.1",
]

# Core Dep set in Nov 2024
dependencies_2024 = [
    "torch==2.5.0",
    "numpy==2.2.0",
    "pandas==2.2.3",
    "scikit-learn==1.6.0",
    "pytorch-lightning==2.4.0",
    "scipy==1.14.1",
    "omegaconf==2.3.0",
    "torchmetrics==1.5.2",
    "einops==0.8.0",
]


[project.urls]
Homepage = "https://github.com/pytorch-tabular/pytorch_tabular"


[build-system]
requires = ["setuptools>=78.1.1", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
include-package-data = true
zip-safe = false


[tool.setuptools.packages.find]
where = ["src"]
include = ["pytorch_tabular", "pytorch_tabular.*"]


[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
# Enable Pyflakes `E` and `F` codes by default.
select = [
    "E", "W",  # see: https://pypi.org/project/pycodestyle
    "F",  # see: https://pypi.org/project/pyflakes
    "I",  # isort
    "UP", # see: https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "RUF100",  # yesqa
#    "D",  # see: https://pypi.org/project/pydocstyle
#    "N",  # see: https://pypi.org/project/pep8-naming
]
extend-select = [
    "C4",  # see: https://pypi.org/project/flake8-comprehensions
#    "SIM",  # see: https://pypi.org/project/flake8-simplify
#    "RET",  # see: https://pypi.org/project/flake8-return
#    "PT",  # see: https://pypi.org/project/flake8-pytest-style
]
ignore = [
    "E731",  # Do not assign a lambda expression, use a def
]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "docs"
]
ignore-init-module-imports = true

[tool.ruff.per-file-ignores]
"setup.py" = ["D100", "SIM115"]
"__about__.py" = ["D100"]
"__init__.py" = ["D100"]

[tool.ruff.pydocstyle]
# Use numpy-style docstrings.
convention = "numpy"

[tool.docformatter]
recursive = true
# this need to be shorter as some docstings are r"""...
wrap-summaries = 119
wrap-descriptions = 120
blank = true
